syntax = "proto3";




service UserService {
  rpc GetUser(GetUserRequest) returns (User) {};
  rpc GetAllUsers(Empty) returns (Users) {};
}

message Empty {
}

message GetUserRequest {
  string id = 1;
}

message User {
  string id = 1;
  string name = 2;
  string email = 3;
}

message Users {
  repeated User users = 1;
}
